# schema-experiment

./: Main.hs  aeson-schemata.cabal  example.hs  memo.txt  schema-experiment.cabal
src/Data/Aeson/: Schema.hs
src/Data/Aeson/Schema/: Classes.hs  Generic.hs  Instances.hs  TH.hs  Types.hs
test/: Spec.hs
