name:                aeson-schemata
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              mt
maintainer:          mt
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
    exposed-modules:
        Data.Aeson.Schema,
        Data.Aeson.Schema.Generic,
        Data.Aeson.Schema.Instances,
        Data.Aeson.Schema.Types,
        Data.Aeson.Schema.Classes
    other-extensions:
        EmptyDataDecls,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        KindSignatures,
        OverlappingInstances,
        ScopedTypeVariables,
        TypeOperators,
        UndecidableInstances,
        OverloadedStrings,
        DeriveGeneric,
        StandaloneDeriving,
        DefaultSignatures
    build-depends:
        base >=4.7 && <4.8,
        text >=1.1 && <1.3,
        containers >=0.5 && <0.6,
        aeson >=0.7 && <0.9,
        mtl >=1.1 && <2.3,
        scientific >=0.0 && <0.4,
        unordered-containers >=0.1.4.0 && <0.3
    hs-source-dirs:     src
    ghc-options:        -Wall -fno-warn-orphans
    default-language:   Haskell2010

test-suite spec
    HS-Source-Dirs:     test, src
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-depends:
        base >=4.7 && <4.8,
        text >=1.1 && <1.3,
        containers >=0.5 && <0.6,
        aeson >=0.7 && <0.9,
        mtl >=1.1 && <2.3,
        scientific >=0.0 && <0.4,
        unordered-containers >=0.1.4.0 && <0.3,
        hspec >=1.12 && <1.13,
        QuickCheck >=2.7 && <2.8
    default-language:   Haskell2010

executable example
    HS-Source-Dirs:     ., src
    main-is:            example.hs
    build-depends:
        base >=4.7 && <4.8,
        text >=1.1 && <1.3,
        containers >=0.5 && <0.6,
        aeson >=0.7 && <0.9,
        mtl >=1.1 && <2.3,
        scientific >=0.0 && <0.4,
        unordered-containers >=0.1.4.0 && <0.3,
        bytestring
    default-language:   Haskell2010
